<?xml version="1.0"?>
<package format="2">
  <name>test_demo_py</name>
  <version>0.0.1</version>
  <description>The test_demo_py package</description>
  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
